--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,10 +1,26 @@
-.board {
+.banner {
     width: 100vw;
-    height: 100vh;
+    height: 10vh;
+    padding: 1rem;
+
+    background: linear-gradient(90deg,rgba(0, 0, 0, 1)    0%,
+                                      rgba(0, 0, 0, 0.8) 50%,
+                                      rgba(0, 0, 0, 1)  100%);
+}
+
+.banner h1 {
+    font-size: 1rem;
+    text-align: center;
+}
+
+
+
+.board {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: 80vh;
 }
 
 .bg-video {
@@ -35,3 +51,38 @@
                                       rgba(0, 0, 0, 1)  100%);
 }
 
+
+
+
+.contain {
+    position: relative;
+    z-index: 3;
+}
+
+.social-media {
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+    align-items: center;
+    width: 100vw;
+    height: 10vh;
+    padding: 1rem;
+
+    background: linear-gradient(90deg,rgba(0, 0, 0, 1)    0%,
+                                      rgba(0, 0, 0, 0.8) 50%,
+                                      rgba(0, 0, 0, 1)  100%);
+    
+    font-family: 'Roboto', sans-serif;
+    font-size: 0.75rem;
+}
+
+.social-media__adresses {
+    display: flex;
+    margin: 1rem 0;
+    list-style: none;
+}
+
+.social-media__link {
+    margin: 0 0.5rem;
+    color: inherit;
+}
