feat: added html and css

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -3,6 +3,6 @@
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: "Press Start 2P", cursive;
+  font-family: "Press Start 2P", system-ui;
   user-select: none;
 }
